// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageTitle /> should render a page title 1`] = `
<h1
  class="sc-bdfBwQ kfndwt"
>
  this is a test
</h1>
`;

exports[`<PageTitle /> should spread other props on root element 1`] = `
<h1
  class="sc-bdfBwQ kfndwt test-class"
  style="background-color: red;"
>
  this is a test
</h1>
`;
